@@ -369,6 +369,7 @@ void Options::loadWidgetGeometry ( QWidget *pWidget, bool bVisible )
 {
 	// Try to restore old form window positioning.
 	if (pWidget) {
+		if (bVisible) pWidget->show(); // Force initial exposure!
 		m_settings.beginGroup("/Geometry/" + pWidget->objectName());
 	#if QT_VERSION >= 0x050000
 		const QByteArray& geometry
